<resources>
    <string name="app_name">ScrumMoji</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="session_id_v1">Session id: %s</string>
    <string name="session_id_copied">Session id copied!</string>
    <string name="create_room">Create room</string>
    <string name="room_id">Room id</string>
    <string name="nickname">Nickname</string>
    <string name="join_room">Join Room</string>
    <string name="emoji_assigned_to_the_card">Emoji assigned to the card</string>
    <string name="icon_close">icon close</string>
    <string name="done">Done</string>
    <string name="sprints_feed">Sprints Feed</string>
    <string name="user_stories_feed">User Stories Feed</string>
    <string name="scrum_master_login">Scrum Master\'s Login</string>
    <string name="developer_login">Delveloper\'s Login</string>
    <string name="developer">Developer</string>
    <string name="who_are_you">Who are you?</string>
    <string name="scrum_master">Scrum Master</string>
    <string name="room_login_nickname_error">Your nickname needs to have at least 4 characters</string>
    <string name="room_id_login_error">Your room id needs to have at least 15 characters</string>
    <string name="assign_hightest_points">Assign points</string>
    <string name="assign_it_myself">Assign it myself</string>
    <string name="assign_your_points">Assign your points</string>
    <string name="next_story">Next Story</string>
    <string name="login_title">SCRUMMOJI</string>
    <string name="alias_hint">Alias</string>
    <string name="enter">Ingresar</string>
</resources>