<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardSelectedContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:contentDescription="@string/icon_close"
        android:padding="@dimen/padding_half"
        android:src="@drawable/ic_close" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/card_selected_margin_size"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_half"
            android:background="@drawable/shape_rectangle_with_corners_yellow">

            <TextView
                android:id="@+id/leftPointsSelectedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_half"
                android:layout_marginBottom="@dimen/margin_standard"
                android:textColor="#562FF3"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/emojiSelectedImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.031"
                tools:text="16" />

            <TextView
                android:id="@+id/rightPointsSelectedTextView"
                style="@style/CardSelectedBaseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/emojiSelectedImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.031"
                tools:text="16" />

            <TextView
                android:id="@+id/bottomPointsSelectedTextView"
                style="@style/CardSelectedBaseStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="42sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emojiSelectedImageView"
                app:layout_constraintVertical_bias="0.969"
                tools:text="16" />

            <ImageView
                android:id="@+id/emojiSelectedImageView"
                android:layout_width="@dimen/emoji_selected_size"
                android:layout_height="@dimen/emoji_selected_size"
                android:layout_marginBottom="@dimen/margin_half"
                android:contentDescription="@string/emoji_assigned_to_the_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_in_love_emoji" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/card_selected_margin_size"
        android:layout_marginBottom="@dimen/margin_standard"
        android:text="@string/done" />

</androidx.appcompat.widget.LinearLayoutCompat>